# inmarket-AI-copilot

./: .env.example  .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  TODO.md  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: __init__.py  health.py  runs.py
apps/api/app/application/: __init__.py  serializers.py
apps/api/app/application/orchestrators/: activation_run.py
apps/api/app/application/services/: agent_service.py  brief_service.py  creative_service.py  intent_service.py  llm_service.py  refinement_service.py  run_service.py  scoring_service.py
apps/api/app/config/: settings.py
apps/api/app/domain/: __init__.py  models.py
apps/api/app/infra/: factories.py  mcp_bridge.py
apps/api/app/infra/providers/: __init__.py  creative_provider.py  mock_event_provider.py  ticketmaster_provider.py
apps/api/app/infra/repositories/: file_repository.py  in_memory.py
apps/api/app/tests/: test_workflow.py
apps/mcp/: pyproject.toml
apps/mcp/app/: schemas.py  server.py
apps/mcp/app/clients/: gemini.py  ticketmaster.py
apps/mcp/app/tests/: test_tools.py
apps/mcp/app/tools/: creative.py  events.py  strategy.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  styles.css  types.ts
apps/web/src/components/: ChatInput.tsx  ChatMessage.tsx  IntakeForm.tsx  RefinementForm.tsx  ResultPanel.tsx  RunHistoryPanel.tsx  Sidebar.tsx  WorkflowTimeline.tsx
apps/web/src/features/copilot/: api.ts
tests/: validate-scaffold.mjs
