[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event-surge-api"
version = "0.1.0"
description = "FastAPI backend for Event Surge Activation Copilot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "langchain>=1.0.0",
  "langchain-google-genai>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]

